# distributed-storage

./: .gitignore  Dockerfile  Makefile  README.md  client.py  compose.yml  config.yml  docker-compose.yml  gen-idle-graphs.py  gen_configs.py  gen_files.py  go.mod  go.sum  inv-script.py  myfirstexpr.py  plots.py  pyproject.toml  runsim.sh  server.py  topo_noswitch.py  topology.py
config/: .gitignore  default.yml  exp-lc-lat-25-homog-false-int-20-fsz-v-rate-10.yml  exp-lc-lat-25-homog-false-int-20-fsz-v-rate-100.yml  exp-lc-lat-25-homog-false-int-20-fsz-v-rate-150.yml  exp-lc-lat-25-homog-false-int-20-fsz-v-rate-200.yml  exp-lc-lat-25-homog-false-int-20-fsz-v-rate-50.yml  exp-lc-lat-25-homog-true-int-20-fsz-v-rate-10.yml  exp-lc-lat-25-homog-true-int-20-fsz-v-rate-100.yml  exp-lc-lat-25-homog-true-int-20-fsz-v-rate-150.yml  exp-lc-lat-25-homog-true-int-20-fsz-v-rate-200.yml  exp-lc-lat-25-homog-true-int-20-fsz-v-rate-50.yml  exp-lrt-lat-25-homog-false-int-20-fsz-v-rate-10.yml  exp-lrt-lat-25-homog-false-int-20-fsz-v-rate-100.yml  exp-lrt-lat-25-homog-false-int-20-fsz-v-rate-150.yml  exp-lrt-lat-25-homog-false-int-20-fsz-v-rate-200.yml  exp-lrt-lat-25-homog-false-int-20-fsz-v-rate-50.yml  exp-lrt-lat-25-homog-true-int-20-fsz-v-rate-10.yml  exp-lrt-lat-25-homog-true-int-20-fsz-v-rate-100.yml  exp-lrt-lat-25-homog-true-int-20-fsz-v-rate-150.yml  exp-lrt-lat-25-homog-true-int-20-fsz-v-rate-200.yml  exp-lrt-lat-25-homog-true-int-20-fsz-v-rate-50.yml  exp-rr-lat-25-homog-false-int-20-fsz-v-rate-10.yml  exp-rr-lat-25-homog-false-int-20-fsz-v-rate-100.yml  (+8 more)
dockerfiles/: Dockerfile  (+3 more)
(+45 files in other folders)
