[project]
name = "distributed-storage"
version = "0.1.0"
description = "A simulation project, evaluating the performance of different load balancing algorithms."
requires-python = "=3.13"
authors = [
	{ name = "Hal Nguyen" },
	{ name = "Emily Martins" },
	{ name = "Yasmin Evans" },
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
